assets/css/style.css
/* ... */
.platform-picker,
.region-picker {
    margin-bottom: 10px;
}

.channels-container h4 {
    padding-left: 1%;
}

.popular-channels {
    position: relative;
    float: left;
    width: 74%;
    margin: 0 0 0 1%;
}

.popular-channels label {
    float: left;
    width: 33.33%;
    margin: 0;
}

.popular-channels label,
.channels-container label {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.channel-picker-toggle,
.toggle-picker {
    display: block;
}

.pickers {
    position: relative;
    float: left;
    width: 23%;
    margin: 0 1%;
}

.popular-channels .close-channel-picker {
    position: absolute;
    top: 0;
    right: 0;
}

.id-added {
    position: absolute;
    top: 0;
    left: 100%;
    width: 20px;
    height: 20px;
    line-height: 20px;
    text-align: center;
    margin: 0 5px;
    padding: 3px;
    background: #ef308f;
    color: #fff;
    border-radius: 50%;
}

.pickers select {
    width: 100%;
}

.channels-container label {
    float: left;
    width: 23%;
    margin: 0 1%;
}

.channels-by-region {
    float: left;
    width: 23%;
    margin: 0 1%;
}

.toggle-link {
    color: #ef308f;
}

.tt-dropdown-menu {
    background: #fff;
}

.tt-suggestion {
    padding: 5px;
}

.tt-suggestion p {
    margin: 0;
}

.tt-suggestion.tt-cursor {
    background: #380b66;
    color: #ef308f;
}

.twitter-typeahead,
.tt-hint,
.channel-search-box {
    width: 100% !important;
}

.tt-dropdown-menu {
    width: 100%;
    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
       -moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.close-channel-picker {
    text-align: right;
}

.dummy h4 {
    color: #999;
}

.dummy input {
    box-sizing: border-box;
    opacity: 0.5;
    height: auto;
}


/* NowNextLater widget */
/* Panel styles */
.widget-panel {
  overflow: hidden;
}

.widget-programme-image {
  display: block;
}

.widget-programme-info {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  padding: 10px;
  background: rgb(51,0,102);
  background: rgba(51,0,102, 0.75);
  color: rgb(255,255,255);
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
}

.widget-programme-info a {
  color: rgb(255,0,154);
  text-decoration: none;
}

.widget-programme-info-inner {
  margin: 0 0 10px;
}

.widget-programme-details {
  float: left;
  width: 74%;
}

.widget-programme-start-time {
  margin-bottom: 3px;
  color: rgb(255,0,154);
  margin-left: 0;
}

.widget-programme-title {
  font-size: 18px;
  line-height: 1.1;
  padding-bottom: 3px;
  font-weight: bold;
}

.widget-programme-start-time,
.widget-programme-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.widget-channel-logo {
  float: right;
  width: auto;
  height: 43px;
}

/* Carousel specific styles */
#carousel-widget-container {
  position: relative;
  width: 459px;
  height: 258px;
}

.fullscreen-button {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 950;
}

.carousel {
  position: relative;
  width: 459px;
  height: 258px;
}

.carousel .widget-panel {
  position: absolute;
  top: 0;
  left: 0;
  width: 459px;
  height: 258px;
}

.carousel .widget-programme-image {
  width: 459px;
  height: 258px;
}

.carousel .widget-programme-info {
  bottom: -42px;
}

.carousel .widget-panel:hover .widget-programme-info {
  bottom: 0;
}

.carousel .widget-api-call a {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding: 5px;
  background: rgb(255,255,255);
  border-radius: 5px;
}

/* Fullscreen specific styles */
.fullscreen-container .widget-panel-container {
  position: relative;
  float: left;
  width: 33.33%;
}

.fullscreen-container .widget-image-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}

.fullscreen-container .widget-programme-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.fullscreen-container .widget-panel {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.fullscreen-container .widget-panel-inner {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}

.fullscreen-widget-container {
  display: none;
}

.fullscreen-widget-container:-webkit-full-screen {
  display: block;
  width: 100%;
  height: 100%;
  background: rgb(51,0,102);
  margin: 0 !important;
}

.fullscreen-widget-container:-moz-full-screen {
  display: block;
  width: 100%;
  height: 100%;
  background: rgb(51,0,102);
  margin: 0 !important;
}

.fullscreen-widget-container:-ms-fullscreen {
  display: block;
  width: 100%;
  height: 100%;
  background: rgb(51,0,102);
  margin: 0 !important;
}

.fullscreen-widget-container:full-screen {
  display: block;
  width: 100%;
  height: 100%;
  background: rgb(51,0,102);
  margin: 0 !important;
}

.fullscreen-widget-container:fullscreen {
  display: block;
  width: 100%;
  height: 100%;
  background: rgb(51,0,102);
  margin: 0 !important;
}


/* Header */
.site-header {
    position: fixed;
    width: 100%;
    background: #efefef;
    background: rgba(239,239,239,0.95);
    box-shadow: 0 1px #EF308F, 0 5px 10px rgba(0,0,0,0.2);
    z-index: 1000;
    font-size: 16px;
}

.site-logo {
    float: left;
    position: relative;
    height: 4rem;
    line-height: 4rem;
}

.site-logo img {
    vertical-align: middle;
}

/* Navigation */
.navbar-links {
    float: left;
    margin-left: 1rem;
}

.nav > li {
    float: left;
    position: relative;
}

.navbar-links .nav {
    margin-top: 1.75rem;
}

.navbar-links .nav > li {
    border-left: 1px solid #fff;
    border-right: 1px solid #ddd;
}

.navbar-links .nav > li:first-child {
    border-left: 0;
}

.navbar-links .nav > li:last-child {
    border-right: 0;
}

.navbar-links .nav a {
    display: block;
    padding: 0.25rem 0.5rem 0.5rem;
    font-size: 1.125rem;
}

.navbar-links .nav a:hover,
.navbar-links .active-link > a {
    color: #fc0088;
}
/* ... */

